src/components/NavBar/NavBar.scss
.navBarContainer {
  position: relative;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  width: 100%;
  height: 10rem;
  color: white;
  background: linear-gradient(
    5deg,
    rgba(47, 157, 71, 0.67) 4.28%,
    rgba(17, 55, 25, 0.67) 96.32%
  );
  a {
    position: relative;
    z-index: 999;
  }
  .containerLogo {
    width: 6.25rem;
    height: 9.375rem;
    display: flex;
    position: absolute;
    top: 3.75rem;
    left: 1.25rem;
  }
  .navContainer {
    width: 80%;
    display: flex;
    height: 10rem;

    align-items: center;
    justify-content: space-around;

    gap: 0;
    position: relative;

    .ulLinks {
      display: flex;
      position: absolute;
      text-decoration: none;
      list-style: none;
      padding-top: 3.125rem;
      gap: 1.25rem;
      z-index: 999;
      .liLinks {
        color: #fff;
        font-family: "Miltonian Tattoo";
        font-size: 32px;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
        a {
          color: white;
          text-decoration: none;
        }
      }
    }
  }

  .loginContainer {
    display: flex;
    right: 0;
    width: 100%;
    gap: 1.25rem;
    justify-content: flex-end;
    right: 0;
    padding-top: 1.875rem;
    height: fit-content;
    .ulLogin {
      position: relative;
      display: flex;
      height: fit-content;
      justify-content: flex-end;
      gap: 1.25rem;
      text-decoration: none;
      list-style: none;
      z-index: 999;
      margin: 0;
      cursor: pointer;
      .liLoginFalse {
        display: none;
      }
    }

    .adminContainer {
      position: relative;
      display: flex;
      flex-direction: column;
      width: fit-content;
      justify-content: end;
      align-items: center;
      gap: 0.625rem;
      z-index: 999;
      p {
        margin: 0;
      }
      .loginTrue {
        border-radius: 50%;
        width: 2.5rem;
        display: flex;
        flex-direction: column;
      }
      .loginFalse {
        display: none;
        width: 0;
        height: 0;
      }
    }
    .iconContainer {
      display: flex;
      height: 5.625rem;
      position: relative;
      width: fit-content;
      justify-content: flex-end;
      align-items: flex-start;

      #iconSocial {
        content: url("../../img/Instagram.png");
        width: 1.875rem;
        height: 1.875rem;
      }
    }
  }
  .imgCartContainer {
    display: flex;
    padding-top: 5rem;
    height: fit-content;
    align-items: flex-end;
    margin: 0.625rem;
    .imgCart {
      width: 3.125rem;
      height: 2.5rem;
    }
  }

  .iconWhatsappContainer {
    display: flex;
    position: fixed;
    width: 100%;
    justify-content: flex-end;
    top: 10.625rem;
    z-index: 500;

    img {
      width: 3.25rem;
    }
    button {
      z-index: 999;
    }
  }
}

@media (max-width: 1000px) {
  .navBarContainer {
    position: relative;
    height: 3.125rem;
    display: inline;
    z-index: 999;
    .btnColapse {
      position: absolute;
      z-index: 999;
      height: 3.125rem;
      border: none;
      right: 0;
    }
    .navContainer {
      width: 100%;
      top: 3.125rem;
      display: flex;
      height: fit-content;
      position: absolute;
      background-color: rgb(255, 255, 255);
      z-index: 999;
      justify-content: flex-end;
      flex-direction: column;
      gap: 0;

      a {
        font-size: 1rem;
        padding: 0;
        color: black;
        font-family: Poppins;
      }
      .ulLinks {
        display: flex;
        position: relative;
        background-color: rgb(255, 255, 255);
        justify-content: flex-end;
        width: 100%;
        gap: 1.25rem;
        z-index: 999;
        padding-right: 0.625rem;
        padding-top: .625rem;
        li {
          width: 100%;
          background-color: white;
          display: flex;
          justify-content: flex-end;

          .nav-link {
            color: black;
            right: 0;
            background-color: white;
          }
        }
      }
    }

    .containerLogo {
      width: 3.125rem;
      height: 3.125rem;
      display: flex;
      position: absolute;
      top: 0;
      left: 0.3125rem;
      z-index: -2;
      padding: 0;
      a {
        img {
          width: 3.125rem;
        }
      }
    }

    .loginContainer {
      display: flex;
      flex-direction: column;
      width: 100%;
      align-items: flex-end;
      padding-top: .625rem;
      margin-bottom: .625rem;
      gap: .625rem;
      color: black;
      padding-right: .625rem;
      .ulLogin {
        font-weight: 700;
        padding-top: 1.875rem;
        font-size: 1rem;
        cursor: pointer;
        .liLoginFalse {
          display: none;
        }
      }

      .adminContainer {
        position: relative;
        display: flex;
        width: 100%;
        justify-content: end;
        
        p {
          margin: 0;
        }
        .loginTrue {
          border-radius: 50%;
          width: 2.5rem;
        }
        .loginFalse {
          display: none;
          width: 0;
          height: 0;
        }
      }
      .iconContainer {
        display: inline;
        width: fit-content;
        height: fit-content;
        #iconSocial{
          content: url("../../img/instagram768.png");
          
        }
      }
    }
    .imgCartContainer {
      display: flex;
      padding-top: 0.3125rem;
      height: 3.125rem;
      align-items: flex-end;
      margin: 0;
      .containerWidget {
        height: 0;
        #imgCart{
          content: url("../../img/carrito-de-compras.png");
        }
      }
    }

    .iconWhatsappContainer {
      display: flex;
      position: fixed;
      width: 94%;
      justify-content: flex-end;
      top: 3.125rem;
      z-index: 500;
      img {
        width: 2.8125rem;
        
      }
      button {
        z-index: 999;
      }
    }
  }
}

